# uscis-case-monitor

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-10-uscis-case-monitor.md
docs/superpowers/specs/: 2026-06-10-uscis-case-monitor-design.md
tests/: test_auth.py  test_cli.py  test_client.py  test_config.py  test_diff.py  test_monitor.py  test_smoke.py  test_state.py
tests/fixtures/: case_base.json  case_new_event.json
uscis_case_monitor/: cli.py
uscis_case_monitor/core/: auth.py  client.py  config.py  diff.py  monitor.py  state.py
