[project]
name = "uscis-case-monitor"
version = "0.1.0"
description = "Check a USCIS case status via the authenticated case-service API."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyotp>=2.9",
    "keyring>=25",
    "platformdirs>=4",
    "playwright>=1.44",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
uscis-case-monitor = "uscis_case_monitor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uscis_case_monitor"]
